--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             async function initTerminal() {
                 asciiDesktop.textContent = desktopArt;
                 asciiMobile.textContent = mobileArt;
-                output.textContent = 'Initializing...\nConnecting to GitHub repository...';
+                output.textContent = 'Initializing...\nAccessing archives...';
                 
                 initializeRippleEffect(); // Initialize the ripple effect
                 
